feat: postgres DB works